<resources>
    <string name="app_name">PracticApp</string>
    <string name="form">Formulari</string>
    <string name="peli">Película</string>
    <string name="login">Login</string>
    <string name="item1">Item_1</string>
    <string name="item2">Item_2</string>
    <string name="submit">Login</string>
    <string name="email">Escriu el teu email</string>
    <string name="contrasenya">Escriu la contrasenya</string>
    <string name="inspira">Pelis Ghibli</string>
    <string name="tv_email">Email:</string>
    <string name="tv_pass">Contrasenya:</string>
    <string name="titol">Introdueix el títol</string>
    <string name="descripcio">Introdueix la descripció</string>
    <string name="any">Introdueix l\'any de publicació</string>
    <string name="puntuacio">Introdueix la puntuació (0-5)</string>
    <string name="url">Introdueix la foto (URL)</string>
    <string name="afegir">AFEGIR</string>
    <string name="buit">Aquest camp s\'ha d\'omplir</string>
    <string name="dif">Puntuació entre 0-5</string>
    <string name="pelicreada">Pel·lícula creada correctament</string>
    <string name="esborrar">ESBORRAR</string>
    <string name="errorGhibli">No es veuen els Ghiblis!</string>
    <string name="benvinguda">Benvingut de nou,</string>


</resources>
