<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/et_titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/titol"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_descripcio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripcio"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/any"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/puntuacio"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_imatge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afegir"
        android:onClick="createPeli"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>


</LinearLayout>